--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,96 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
+  margin: 0;
+  padding: 0;
+  background: linear-gradient(90deg, #FC466B 0%, #3F5EFB 100%);
+  height: 100vh;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+#calculator-container {
+  border: 5px solid #343838;
+  background: #343838;
+  border-radius: 50px;
+  width: 23vw;
+  height: 38vw;
+  box-shadow: 7px 5px 50px 5px rgba(0,0,0,0.5);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#output {
+  display: flex;
+  align-items: center;
+  justify-content:center;
+  width: 19vw;
+  padding-right: 2vw;
+  margin: 15px auto 10px auto;
+  border-radius: 36px;
+  height: 15vh;
+  border: none;
+  text-align: right;
+  font-size: 6.5vh;
+  background: #FC466B;
+  color: #EEE0CB;
+}
+
+#btnContainer {
+  display: flex;
+  width: 22vw;
+  margin: 0 auto;
+}
+
+#buttons,
+#top-functions,
+#operations {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+#operations {
+  width: 5.5vw;
+}
+
+#number-btns button,
+#top-functions button,
+#operations button {
+  width: 4.5vw;
+  height: 4.5vw;
+  border: none;
+  border-radius: 50%;
+  background-color: #3F5EFB;
+  color: #EEE0CB;
+  font-size: 4vh;
+  margin: 0.5vw;
+}
+
+#top-functions button {
+  background: #864ead;
+}
+
+#operations button {
+  background: #FC466B;
+}
+
+#number-btns button:hover,
+#top-functions button:hover,
+#operations button:hover  {
+  background: #FC466B;
+  cursor: pointer;
+  transition: 500ms;
+}
+
+#top-functions button:hover {
+  background: #3F5EFB;
+}
+
+#operations button:hover {
+  background-color: #864ead;
+}
+
+/* makes 0 btn wider */
+#number-btns button:nth-of-type(10){
+  border-radius: 32px;
+  width: 10vw;
 }
