--- a/src/App.css
+++ b/src/App.css
@@ -1,70 +1,56 @@
-body {
-  margin: 0;
-  padding: 0;
-  background: linear-gradient(90deg, #FC466B 0%, #3F5EFB 100%);
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
+/* MOBILE */
 #calculator-container {
-  border: 5px solid #343838;
+  width: 100vw;
+  height: 100vh;
   background: #343838;
-  border-radius: 50px;
-  width: 23vw;
-  height: 38vw;
-  box-shadow: 7px 5px 50px 5px rgba(0,0,0,0.5);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 #output {
-  display: flex;
-  align-items: center;
-  justify-content:center;
-  width: 19vw;
-  padding-right: 2vw;
-  margin: 15px auto 10px auto;
-  border-radius: 36px;
-  height: 15vh;
-  border: none;
-  text-align: right;
+  width: 85vw;
+  height: 85vw;
+  padding: 0;
+  border: 2px solid #343838;
   font-size: 6.5vh;
-  background: #FC466B;
   color: #EEE0CB;
+  text-align: center;
+  border-radius: 36px;
+  margin-bottom: 10px;
 }
+
+input[type="text" i] {
+  padding: 0px;
+}
+
 
 #btnContainer {
   display: flex;
-  width: 22vw;
-  margin: 0 auto;
-}
-
-#buttons,
-#top-functions,
-#operations {
-  display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
   justify-content: center;
+  align-items: center;
 }
 
-#operations {
-  width: 5.5vw;
+#col1 {
+  width: 63.75vw;
 }
 
-#number-btns button,
-#top-functions button,
-#operations button {
-  width: 4.5vw;
-  height: 4.5vw;
-  border: none;
-  border-radius: 50%;
-  background-color: #3F5EFB;
+#col2 {
+  width: 21.25vw;
+}
+
+button {
+  width: 21.25vw;
+  height: 21.25vw;
+  border: 2px solid #343838;
+  padding: none;
   color: #EEE0CB;
   font-size: 4vh;
-  margin: 0.5vw;
+  background-color: #3F5EFB;
+  border-radius: 50%;
 }
-
 #top-functions button {
   background: #864ead;
 }
@@ -89,8 +75,83 @@ body {
   background-color: #864ead;
 }
 
-/* makes 0 btn wider */
 #number-btns button:nth-of-type(10){
   border-radius: 32px;
-  width: 10vw;
+  width: 42.5vw; 
+} 
+
+
+@media screen and (min-width: 501px) {
+  #root {
+    background: linear-gradient(90deg, #FC466B 0%, #3F5EFB 100%);
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  #calculator-container {
+    width: 80vw;
+    height: 80vh;
+    background: #343838;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 36px;
+    padding: 50px 0;
+    box-shadow: 7px 5px 50px 5px rgba(0,0,0,0.5);
+  }
+
+  #output {
+    width: 65vw;
+    height: 65vw;
+  }
+
+  #col1 {
+    width: 48.75vw;
+  }
+  
+  #col2 {
+    width: 16.25vw;
+  }
+  
+  button {
+    width: 16.25vw;
+    height: 16.25vw;
+  }
+
+  #number-btns button:nth-of-type(10){
+    border-radius: 32px;
+    width: 32.5vw; 
+  } 
+}
+
+@media screen and (min-width: 1001px) {
+  #calculator-container {
+    width: 25vw;
+    height: 60vh;
+  }
+
+  #output {
+    width: 20vw;
+  }
+
+  #col1 {
+    width: 15vw;
+  }
+  
+  #col2 {
+    width: 5vw;
+  }
+  
+  button {
+    width: 5vw;
+    height: 5vw;
+  }
+
+  #number-btns button:nth-of-type(10){
+    border-radius: 32px;
+    width: 10vw; 
+  } 
 }
